# fty-srr-rest

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  ci_dependencies.sh  configure.ac
builds/check_zproject/: ci_build.sh
ecpp/: rest_srr_GET.ecpp  rest_srr_reset_POST.ecpp  rest_srr_restore_POST.ecpp  rest_srr_save_POST.ecpp
include/: fty_srr_helpers.h
packaging/debian/: changelog  control  copyright  libfty-srr-rest1.install
packaging/redhat/: fty-srr-rest.spec
src/: Makemodule.am  fty_srr_helpers.cc  fty_srr_helpers.h  rest_srr_restore_POST.ecpp  rest_srr_save_POST.ecpp
tests/: CMakeLists.txt  main.cc
tests/src/: main.cc
